[package]
name = "vango_client"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["serde"]
default-target = "x86_64-apple-darwin"
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]

[features]
serde = ["dep:serde", "uuid/serde", "bluer/serde"]

[dependencies]
diff-drive = {git = "https://github.com/nmarks99/diff_drive.git" }
csv = "1.2.2"
anyhow = "1.0.71"
bluest = "0.5.3"
async-trait = "0.1.57"
futures-util = { version = "0.3.24" }
serde = { version = "1.0.143", optional = true, features = ["derive"] }
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "time"] }
termion = "2.0.1"
num-traits = "0.2.16"

[target.'cfg(not(target_os = "linux"))'.dependencies]
uuid = "1.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.15.0", features = ["bluetoothd"] }
once_cell = "1.13.1"
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }

